--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -49,7 +49,7 @@ nav {
 
 #home {
     background-image: url("../img/simone_home.png");
-    background-position: center right;
+    background-position: bottom right;
     background-size: cover;
     background-size: contain;
     background-repeat: no-repeat;
